# Magician-Legacy

./: .gitignore  Cargo.toml  README.md  index.html  kermmaw_db  tmp_out.txt  todo.md
migrations/: 20250225144720_inti_script.sql
src/: event_handler.rs  main.rs  utils.rs
src/commands/: build_character.rs  delete_character.rs  deregister.rs  dump_cache.rs  mod.rs  register.rs  tmp.rs
src/sql_scripts/: characters.rs  create_tables.rs  discord_users.rs  mod.rs
